testsuite/tests/indexed-types/should_fail/HsBootFam_aux.hs
{-# LANGUAGE TypeFamilies #-}

module HsBootFam_aux where

type family F a
type instance F Int = Char
